--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -28,12 +28,10 @@
                 app:layout_constraintTop_toTopOf="parent"
                 app:srcCompat="@drawable/fui_ic_googleg_color_24dp" />
 
-            <Button
+            <com.google.android.gms.common.SignInButton
                 android:id="@+id/buttonSignGoogle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="8dp"
-                android:text="@string/fui_sign_in_with_google"
                 app:layout_constraintEnd_toEndOf="@+id/buttonRegisterEmail"
                 app:layout_constraintStart_toStartOf="@+id/buttonRegisterEmail"
                 app:layout_constraintTop_toBottomOf="@+id/buttonRegisterEmail" />
