--- a/app/src/main/res/layout/fragment_buy_sell.xml
+++ b/app/src/main/res/layout/fragment_buy_sell.xml
@@ -9,7 +9,10 @@
 
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -18,7 +21,7 @@
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
-                android:layout_height="720dp">
+                android:layout_height="wrap_content">
 
                 <Spinner
                     android:id="@+id/BuySellDropdown"
