--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -20,13 +20,13 @@
 
             <ImageView
                 android:id="@+id/imageView2"
-                android:layout_width="150dp"
-                android:layout_height="150dp"
+                android:layout_width="190dp"
+                android:layout_height="180dp"
                 android:layout_marginTop="24dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                app:srcCompat="@drawable/fui_ic_googleg_color_24dp" />
+                app:srcCompat="@drawable/appscreenlogo" />
 
             <com.google.android.gms.common.SignInButton
                 android:id="@+id/buttonSignGoogle"
