--- a/app/src/main/res/layout/fragment_detail_stock_fragments_wrapper.xml
+++ b/app/src/main/res/layout/fragment_detail_stock_fragments_wrapper.xml
@@ -35,8 +35,10 @@
             <androidx.fragment.app.FragmentContainerView
                 android:id="@+id/SingleStockGraphFragmentContainer"
                 android:name="no.stockwallet.Fragments.DetailedStockFragments.GraphFragment"
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="200dp"
+                android:layout_margin="10px"
+                app:layout_constraintBottom_toTopOf="@+id/SingleStockAdditionalDataFragmentContainer"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="parent"
@@ -52,18 +54,6 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/SingleStockGraphFragmentContainer"
                 tools:layout="@layout/fragment_additional_data" />
-
-            <com.google.android.material.floatingactionbutton.FloatingActionButton
-                android:id="@+id/floatingActionButton"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginEnd="16dp"
-                android:clickable="true"
-                android:src="@drawable/fab_icon"
-                app:backgroundTint="@color/purple_500"
-                app:layout_constraintBottom_toBottomOf="@+id/SingleStockGraphFragmentContainer"
-                app:layout_constraintEnd_toEndOf="parent"
-                tools:ignore="SpeakableTextPresentCheck" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
     </ScrollView>
