--- a/app/src/main/res/layout/fragment_additional_data.xml
+++ b/app/src/main/res/layout/fragment_additional_data.xml
@@ -176,7 +176,7 @@
         android:text="@string/stock_high"
         android:textSize="20sp"
         android:textStyle="bold"
-        app:layout_constraintBottom_toTopOf="@+id/button2"
+        app:layout_constraintBottom_toTopOf="@+id/buyButton"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/SingleStockYearBottom" />
 
@@ -186,7 +186,7 @@
         android:layout_height="wrap_content"
         android:text="yearHighPH"
         android:textSize="20sp"
-        app:layout_constraintBottom_toTopOf="@+id/button2"
+        app:layout_constraintBottom_toTopOf="@+id/buyButton"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="@+id/guideline15"
         app:layout_constraintTop_toBottomOf="@+id/SingleStockYearBottomPH" />
@@ -199,7 +199,7 @@
         app:layout_constraintGuide_percent="0.88888" />
 
     <Button
-        android:id="@+id/button2"
+        android:id="@+id/buyButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/buy_sell_button"
