--- a/app/src/main/res/layout/fragment_buy_sell_fragments_wrapper.xml
+++ b/app/src/main/res/layout/fragment_buy_sell_fragments_wrapper.xml
@@ -2,7 +2,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/frameLayout"
+    android:id="@+id/BuySellFragmentsLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".Fragments.Wrappers.BuySellFragmentsWrapper">
@@ -15,5 +15,6 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        tools:layout="@layout/fragment_buy_sell" />
 </androidx.constraintlayout.widget.ConstraintLayout>
